# FIM_Eikonal_equation

./: .gitignore  CMakeLists.txt  README.md
LocalProblem/: Makefile  main_eikonal.cpp
include/: EikonalSolver.hpp  Mesh.hpp  MeshElement.hpp  Node.hpp  ParallelEikonalSolver.hpp  VTKWriter.hpp  loadMesh.hpp
src/: main.cpp
tests/: mesh2D.vtk
